parser.output
Grammar

    0 $accept: Start $end

    1 Start: Classes

    2 Classes: Class Classes
    3        | Class

    4 Class: T_ID T_EXTENDS T_ID T_OPENCURLY Members Methods T_CLOSECURLY
    5      | T_ID T_OPENCURLY Members Methods T_CLOSECURLY

    6 Members: Members Member
    7        | /* empty */

    8 Member: Type T_ID

    9 Type: T_INT
   10     | T_BOOL
   11     | T_ID

   12 Methods: Method Methods
   13        | /* empty */

   14 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLY Body T_CLOSECURLY

   15 Body: Declarations Statements Return

   16 Parameters: Parameter
   17           | /* empty */

   18 Parameter: Parameter_p
   19          | Parameter_p T_COMMA Parameter

   20 Parameter_p: T_ID T_COLON Type

   21 Declarations: Declarations Type Declaration
   22             | /* empty */

   23 Declaration: Declaration T_COMMA T_ID
   24            | T_ID

   25 Statements: Statement Statements
   26           | /* empty */

   27 Statement: Assignment
   28          | Method_Call
   29          | ifelse
   30          | While
   31          | print

   32 Return: T_RETURN Expressions
   33       | /* empty */

   34 Assignment: T_ID T_DOT T_ID T_E Expressions
   35           | T_ID T_E Expressions

   36 Method_Call: T_ID T_DOT T_ID T_OPENPAREN Arguments T_CLOSEPAREN
   37            | T_ID T_OPENPAREN Arguments T_CLOSEPAREN

   38 ifelse: T_IF Expressions T_OPENCURLY Block T_CLOSECURLY
   39       | T_IF Expressions T_OPENCURLY Block T_CLOSECURLY T_ELSE T_OPENCURLY Block T_CLOSECURLY

   40 While: T_WHILE Expressions T_OPENCURLY Block T_CLOSECURLY

   41 print: T_PRINT Expressions

   42 Block: Statement Block
   43      | Statement

   44 Expressions: Expressions T_PLUS Expressions
   45            | Expressions T_MINUS Expressions
   46            | Expressions T_TIMES Expressions
   47            | Expressions T_DIV Expressions
   48            | Expressions T_LESS Expressions
   49            | Expressions T_LESSEQUAL Expressions
   50            | Expressions T_EQUAL Expressions
   51            | Expressions T_AND Expressions
   52            | Expressions T_OR Expressions
   53            | T_NOT Expressions
   54            | T_MINUS Expressions
   55            | T_ID
   56            | T_ID T_DOT T_ID
   57            | MethodCall
   58            | T_OPENPAREN Expressions T_CLOSEPAREN
   59            | T_NUM
   60            | T_TRUE
   61            | T_FALSE
   62            | T_NEW T_ID
   63            | T_NEW T_ID T_OPENPAREN Arguments T_CLOSEPAREN

   64 ReturnType: T_NONE
   65           | Type

   66 MethodCall: T_ID T_OPENPAREN Arguments T_CLOSEPAREN
   67           | T_ID T_DOT T_ID T_OPENPAREN Arguments T_CLOSEPAREN

   68 Arguments: Arguments_p
   69          | /* empty */

   70 Arguments_p: Arguments_p T_COMMA Expressions
   71            | Expressions


Terminals, with rules where they appear

$end (0) 0
error (256)
T_NUM (258) 59
T_INT (259) 9
T_EXTENDS (260) 4
T_OPENCURLY (261) 4 5 14 38 39 40
T_CLOSECURLY (262) 4 5 14 38 39 40
T_OPENPAREN (263) 14 36 37 58 63 66 67
T_CLOSEPAREN (264) 14 36 37 58 63 66 67
T_RETURN (265) 32
T_ID (266) 4 5 8 11 14 20 23 24 34 35 36 37 55 56 62 63 66 67
T_BOOL (267) 10
T_IF (268) 38 39
T_ELSE (269) 39
T_WHILE (270) 40
T_PRINT (271) 41
T_DOT (272) 34 36 56 67
T_OR (273) 52
T_AND (274) 51
T_LESSEQUAL (275) 49
T_LESS (276) 48
T_PLUS (277) 44
T_MINUS (278) 45 54
T_TIMES (279) 46
T_DIV (280) 47
T_NOT (281) 53
T_ARROW (282) 14
T_EQUAL (283) 50
T_NONE (284) 64
T_NEW (285) 62 63
T_COMMA (286) 19 23 70
T_TRUE (287) 60
T_FALSE (288) 61
T_COLON (289) 20
T_E (290) 34 35


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
Start (37)
    on left: 1, on right: 0
Classes (38)
    on left: 2 3, on right: 1 2
Class (39)
    on left: 4 5, on right: 2 3
Members (40)
    on left: 6 7, on right: 4 5 6
Member (41)
    on left: 8, on right: 6
Type (42)
    on left: 9 10 11, on right: 8 20 21 65
Methods (43)
    on left: 12 13, on right: 4 5 12
Method (44)
    on left: 14, on right: 12
Body (45)
    on left: 15, on right: 14
Parameters (46)
    on left: 16 17, on right: 14
Parameter (47)
    on left: 18 19, on right: 16 19
Parameter_p (48)
    on left: 20, on right: 18 19
Declarations (49)
    on left: 21 22, on right: 15 21
Declaration (50)
    on left: 23 24, on right: 21 23
Statements (51)
    on left: 25 26, on right: 15 25
Statement (52)
    on left: 27 28 29 30 31, on right: 25 42 43
Return (53)
    on left: 32 33, on right: 15
Assignment (54)
    on left: 34 35, on right: 27
Method_Call (55)
    on left: 36 37, on right: 28
ifelse (56)
    on left: 38 39, on right: 29
While (57)
    on left: 40, on right: 30
print (58)
    on left: 41, on right: 31
Block (59)
    on left: 42 43, on right: 38 39 40 42
Expressions (60)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63, on right: 32 34 35 38 39 40 41 44 45 46 47 48 49 50 51 52
    53 54 58 70 71
ReturnType (61)
    on left: 64 65, on right: 14
MethodCall (62)
    on left: 66 67, on right: 57
Arguments (63)
    on left: 68 69, on right: 36 37 63 66 67
Arguments_p (64)
    on left: 70 71, on right: 68 70


State 0

    0 $accept: . Start $end

    T_ID  shift, and go to state 1

    Start    go to state 2
    Classes  go to state 3
    Class    go to state 4


State 1

    4 Class: T_ID . T_EXTENDS T_ID T_OPENCURLY Members Methods T_CLOSECURLY
    5      | T_ID . T_OPENCURLY Members Methods T_CLOSECURLY

    T_EXTENDS    shift, and go to state 5
    T_OPENCURLY  shift, and go to state 6


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 7


State 3

    1 Start: Classes .

    $default  reduce using rule 1 (Start)


State 4

    2 Classes: Class . Classes
    3        | Class .

    T_ID  shift, and go to state 1

    $default  reduce using rule 3 (Classes)

    Classes  go to state 8
    Class    go to state 4


State 5

    4 Class: T_ID T_EXTENDS . T_ID T_OPENCURLY Members Methods T_CLOSECURLY

    T_ID  shift, and go to state 9


State 6

    5 Class: T_ID T_OPENCURLY . Members Methods T_CLOSECURLY

    $default  reduce using rule 7 (Members)

    Members  go to state 10


State 7

    0 $accept: Start $end .

    $default  accept


State 8

    2 Classes: Class Classes .

    $default  reduce using rule 2 (Classes)


State 9

    4 Class: T_ID T_EXTENDS T_ID . T_OPENCURLY Members Methods T_CLOSECURLY

    T_OPENCURLY  shift, and go to state 11


State 10

    5 Class: T_ID T_OPENCURLY Members . Methods T_CLOSECURLY
    6 Members: Members . Member

    T_INT   shift, and go to state 12
    T_ID    shift, and go to state 13
    T_BOOL  shift, and go to state 14

    $default  reduce using rule 13 (Methods)

    Member   go to state 15
    Type     go to state 16
    Methods  go to state 17
    Method   go to state 18


State 11

    4 Class: T_ID T_EXTENDS T_ID T_OPENCURLY . Members Methods T_CLOSECURLY

    $default  reduce using rule 7 (Members)

    Members  go to state 19


State 12

    9 Type: T_INT .

    $default  reduce using rule 9 (Type)


State 13

   11 Type: T_ID .
   14 Method: T_ID . T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLY Body T_CLOSECURLY

    T_OPENPAREN  shift, and go to state 20

    $default  reduce using rule 11 (Type)


State 14

   10 Type: T_BOOL .

    $default  reduce using rule 10 (Type)


State 15

    6 Members: Members Member .

    $default  reduce using rule 6 (Members)


State 16

    8 Member: Type . T_ID

    T_ID  shift, and go to state 21


State 17

    5 Class: T_ID T_OPENCURLY Members Methods . T_CLOSECURLY

    T_CLOSECURLY  shift, and go to state 22


State 18

   12 Methods: Method . Methods

    T_ID  shift, and go to state 23

    $default  reduce using rule 13 (Methods)

    Methods  go to state 24
    Method   go to state 18


State 19

    4 Class: T_ID T_EXTENDS T_ID T_OPENCURLY Members . Methods T_CLOSECURLY
    6 Members: Members . Member

    T_INT   shift, and go to state 12
    T_ID    shift, and go to state 13
    T_BOOL  shift, and go to state 14

    $default  reduce using rule 13 (Methods)

    Member   go to state 15
    Type     go to state 16
    Methods  go to state 25
    Method   go to state 18


State 20

   14 Method: T_ID T_OPENPAREN . Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLY Body T_CLOSECURLY

    T_ID  shift, and go to state 26

    $default  reduce using rule 17 (Parameters)

    Parameters   go to state 27
    Parameter    go to state 28
    Parameter_p  go to state 29


State 21

    8 Member: Type T_ID .

    $default  reduce using rule 8 (Member)


State 22

    5 Class: T_ID T_OPENCURLY Members Methods T_CLOSECURLY .

    $default  reduce using rule 5 (Class)


State 23

   14 Method: T_ID . T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLY Body T_CLOSECURLY

    T_OPENPAREN  shift, and go to state 20


State 24

   12 Methods: Method Methods .

    $default  reduce using rule 12 (Methods)


State 25

    4 Class: T_ID T_EXTENDS T_ID T_OPENCURLY Members Methods . T_CLOSECURLY

    T_CLOSECURLY  shift, and go to state 30


State 26

   20 Parameter_p: T_ID . T_COLON Type

    T_COLON  shift, and go to state 31


State 27

   14 Method: T_ID T_OPENPAREN Parameters . T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLY Body T_CLOSECURLY

    T_CLOSEPAREN  shift, and go to state 32


State 28

   16 Parameters: Parameter .

    $default  reduce using rule 16 (Parameters)


State 29

   18 Parameter: Parameter_p .
   19          | Parameter_p . T_COMMA Parameter

    T_COMMA  shift, and go to state 33

    $default  reduce using rule 18 (Parameter)


State 30

    4 Class: T_ID T_EXTENDS T_ID T_OPENCURLY Members Methods T_CLOSECURLY .

    $default  reduce using rule 4 (Class)


State 31

   20 Parameter_p: T_ID T_COLON . Type

    T_INT   shift, and go to state 12
    T_ID    shift, and go to state 34
    T_BOOL  shift, and go to state 14

    Type  go to state 35


State 32

   14 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN . T_ARROW ReturnType T_OPENCURLY Body T_CLOSECURLY

    T_ARROW  shift, and go to state 36


State 33

   19 Parameter: Parameter_p T_COMMA . Parameter

    T_ID  shift, and go to state 26

    Parameter    go to state 37
    Parameter_p  go to state 29


State 34

   11 Type: T_ID .

    $default  reduce using rule 11 (Type)


State 35

   20 Parameter_p: T_ID T_COLON Type .

    $default  reduce using rule 20 (Parameter_p)


State 36

   14 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW . ReturnType T_OPENCURLY Body T_CLOSECURLY

    T_INT   shift, and go to state 12
    T_ID    shift, and go to state 34
    T_BOOL  shift, and go to state 14
    T_NONE  shift, and go to state 38

    Type        go to state 39
    ReturnType  go to state 40


State 37

   19 Parameter: Parameter_p T_COMMA Parameter .

    $default  reduce using rule 19 (Parameter)


State 38

   64 ReturnType: T_NONE .

    $default  reduce using rule 64 (ReturnType)


State 39

   65 ReturnType: Type .

    $default  reduce using rule 65 (ReturnType)


State 40

   14 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType . T_OPENCURLY Body T_CLOSECURLY

    T_OPENCURLY  shift, and go to state 41


State 41

   14 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLY . Body T_CLOSECURLY

    $default  reduce using rule 22 (Declarations)

    Body          go to state 42
    Declarations  go to state 43


State 42

   14 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLY Body . T_CLOSECURLY

    T_CLOSECURLY  shift, and go to state 44


State 43

   15 Body: Declarations . Statements Return
   21 Declarations: Declarations . Type Declaration

    T_INT    shift, and go to state 12
    T_ID     shift, and go to state 45
    T_BOOL   shift, and go to state 14
    T_IF     shift, and go to state 46
    T_WHILE  shift, and go to state 47
    T_PRINT  shift, and go to state 48

    $default  reduce using rule 26 (Statements)

    Type         go to state 49
    Statements   go to state 50
    Statement    go to state 51
    Assignment   go to state 52
    Method_Call  go to state 53
    ifelse       go to state 54
    While        go to state 55
    print        go to state 56


State 44

   14 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLY Body T_CLOSECURLY .

    $default  reduce using rule 14 (Method)


State 45

   11 Type: T_ID .
   34 Assignment: T_ID . T_DOT T_ID T_E Expressions
   35           | T_ID . T_E Expressions
   36 Method_Call: T_ID . T_DOT T_ID T_OPENPAREN Arguments T_CLOSEPAREN
   37            | T_ID . T_OPENPAREN Arguments T_CLOSEPAREN

    T_OPENPAREN  shift, and go to state 57
    T_DOT        shift, and go to state 58
    T_E          shift, and go to state 59

    $default  reduce using rule 11 (Type)


State 46

   38 ifelse: T_IF . Expressions T_OPENCURLY Block T_CLOSECURLY
   39       | T_IF . Expressions T_OPENCURLY Block T_CLOSECURLY T_ELSE T_OPENCURLY Block T_CLOSECURLY

    T_NUM        shift, and go to state 60
    T_OPENPAREN  shift, and go to state 61
    T_ID         shift, and go to state 62
    T_MINUS      shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_NEW        shift, and go to state 65
    T_TRUE       shift, and go to state 66
    T_FALSE      shift, and go to state 67

    Expressions  go to state 68
    MethodCall   go to state 69


State 47

   40 While: T_WHILE . Expressions T_OPENCURLY Block T_CLOSECURLY

    T_NUM        shift, and go to state 60
    T_OPENPAREN  shift, and go to state 61
    T_ID         shift, and go to state 62
    T_MINUS      shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_NEW        shift, and go to state 65
    T_TRUE       shift, and go to state 66
    T_FALSE      shift, and go to state 67

    Expressions  go to state 70
    MethodCall   go to state 69


State 48

   41 print: T_PRINT . Expressions

    T_NUM        shift, and go to state 60
    T_OPENPAREN  shift, and go to state 61
    T_ID         shift, and go to state 62
    T_MINUS      shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_NEW        shift, and go to state 65
    T_TRUE       shift, and go to state 66
    T_FALSE      shift, and go to state 67

    Expressions  go to state 71
    MethodCall   go to state 69


State 49

   21 Declarations: Declarations Type . Declaration

    T_ID  shift, and go to state 72

    Declaration  go to state 73


State 50

   15 Body: Declarations Statements . Return

    T_RETURN  shift, and go to state 74

    $default  reduce using rule 33 (Return)

    Return  go to state 75


State 51

   25 Statements: Statement . Statements

    T_ID     shift, and go to state 76
    T_IF     shift, and go to state 46
    T_WHILE  shift, and go to state 47
    T_PRINT  shift, and go to state 48

    $default  reduce using rule 26 (Statements)

    Statements   go to state 77
    Statement    go to state 51
    Assignment   go to state 52
    Method_Call  go to state 53
    ifelse       go to state 54
    While        go to state 55
    print        go to state 56


State 52

   27 Statement: Assignment .

    $default  reduce using rule 27 (Statement)


State 53

   28 Statement: Method_Call .

    $default  reduce using rule 28 (Statement)


State 54

   29 Statement: ifelse .

    $default  reduce using rule 29 (Statement)


State 55

   30 Statement: While .

    $default  reduce using rule 30 (Statement)


State 56

   31 Statement: print .

    $default  reduce using rule 31 (Statement)


State 57

   37 Method_Call: T_ID T_OPENPAREN . Arguments T_CLOSEPAREN

    T_NUM        shift, and go to state 60
    T_OPENPAREN  shift, and go to state 61
    T_ID         shift, and go to state 62
    T_MINUS      shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_NEW        shift, and go to state 65
    T_TRUE       shift, and go to state 66
    T_FALSE      shift, and go to state 67

    $default  reduce using rule 69 (Arguments)

    Expressions  go to state 78
    MethodCall   go to state 69
    Arguments    go to state 79
    Arguments_p  go to state 80


State 58

   34 Assignment: T_ID T_DOT . T_ID T_E Expressions
   36 Method_Call: T_ID T_DOT . T_ID T_OPENPAREN Arguments T_CLOSEPAREN

    T_ID  shift, and go to state 81


State 59

   35 Assignment: T_ID T_E . Expressions

    T_NUM        shift, and go to state 60
    T_OPENPAREN  shift, and go to state 61
    T_ID         shift, and go to state 62
    T_MINUS      shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_NEW        shift, and go to state 65
    T_TRUE       shift, and go to state 66
    T_FALSE      shift, and go to state 67

    Expressions  go to state 82
    MethodCall   go to state 69


State 60

   59 Expressions: T_NUM .

    $default  reduce using rule 59 (Expressions)


State 61

   58 Expressions: T_OPENPAREN . Expressions T_CLOSEPAREN

    T_NUM        shift, and go to state 60
    T_OPENPAREN  shift, and go to state 61
    T_ID         shift, and go to state 62
    T_MINUS      shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_NEW        shift, and go to state 65
    T_TRUE       shift, and go to state 66
    T_FALSE      shift, and go to state 67

    Expressions  go to state 83
    MethodCall   go to state 69


State 62

   55 Expressions: T_ID .
   56            | T_ID . T_DOT T_ID
   66 MethodCall: T_ID . T_OPENPAREN Arguments T_CLOSEPAREN
   67           | T_ID . T_DOT T_ID T_OPENPAREN Arguments T_CLOSEPAREN

    T_OPENPAREN  shift, and go to state 84
    T_DOT        shift, and go to state 85

    $default  reduce using rule 55 (Expressions)


State 63

   54 Expressions: T_MINUS . Expressions

    T_NUM        shift, and go to state 60
    T_OPENPAREN  shift, and go to state 61
    T_ID         shift, and go to state 62
    T_MINUS      shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_NEW        shift, and go to state 65
    T_TRUE       shift, and go to state 66
    T_FALSE      shift, and go to state 67

    Expressions  go to state 86
    MethodCall   go to state 69


State 64

   53 Expressions: T_NOT . Expressions

    T_NUM        shift, and go to state 60
    T_OPENPAREN  shift, and go to state 61
    T_ID         shift, and go to state 62
    T_MINUS      shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_NEW        shift, and go to state 65
    T_TRUE       shift, and go to state 66
    T_FALSE      shift, and go to state 67

    Expressions  go to state 87
    MethodCall   go to state 69


State 65

   62 Expressions: T_NEW . T_ID
   63            | T_NEW . T_ID T_OPENPAREN Arguments T_CLOSEPAREN

    T_ID  shift, and go to state 88


State 66

   60 Expressions: T_TRUE .

    $default  reduce using rule 60 (Expressions)


State 67

   61 Expressions: T_FALSE .

    $default  reduce using rule 61 (Expressions)


State 68

   38 ifelse: T_IF Expressions . T_OPENCURLY Block T_CLOSECURLY
   39       | T_IF Expressions . T_OPENCURLY Block T_CLOSECURLY T_ELSE T_OPENCURLY Block T_CLOSECURLY
   44 Expressions: Expressions . T_PLUS Expressions
   45            | Expressions . T_MINUS Expressions
   46            | Expressions . T_TIMES Expressions
   47            | Expressions . T_DIV Expressions
   48            | Expressions . T_LESS Expressions
   49            | Expressions . T_LESSEQUAL Expressions
   50            | Expressions . T_EQUAL Expressions
   51            | Expressions . T_AND Expressions
   52            | Expressions . T_OR Expressions

    T_OPENCURLY  shift, and go to state 89
    T_OR         shift, and go to state 90
    T_AND        shift, and go to state 91
    T_LESSEQUAL  shift, and go to state 92
    T_LESS       shift, and go to state 93
    T_PLUS       shift, and go to state 94
    T_MINUS      shift, and go to state 95
    T_TIMES      shift, and go to state 96
    T_DIV        shift, and go to state 97
    T_EQUAL      shift, and go to state 98


State 69

   57 Expressions: MethodCall .

    $default  reduce using rule 57 (Expressions)


State 70

   40 While: T_WHILE Expressions . T_OPENCURLY Block T_CLOSECURLY
   44 Expressions: Expressions . T_PLUS Expressions
   45            | Expressions . T_MINUS Expressions
   46            | Expressions . T_TIMES Expressions
   47            | Expressions . T_DIV Expressions
   48            | Expressions . T_LESS Expressions
   49            | Expressions . T_LESSEQUAL Expressions
   50            | Expressions . T_EQUAL Expressions
   51            | Expressions . T_AND Expressions
   52            | Expressions . T_OR Expressions

    T_OPENCURLY  shift, and go to state 99
    T_OR         shift, and go to state 90
    T_AND        shift, and go to state 91
    T_LESSEQUAL  shift, and go to state 92
    T_LESS       shift, and go to state 93
    T_PLUS       shift, and go to state 94
    T_MINUS      shift, and go to state 95
    T_TIMES      shift, and go to state 96
    T_DIV        shift, and go to state 97
    T_EQUAL      shift, and go to state 98


State 71

   41 print: T_PRINT Expressions .
   44 Expressions: Expressions . T_PLUS Expressions
   45            | Expressions . T_MINUS Expressions
   46            | Expressions . T_TIMES Expressions
   47            | Expressions . T_DIV Expressions
   48            | Expressions . T_LESS Expressions
   49            | Expressions . T_LESSEQUAL Expressions
   50            | Expressions . T_EQUAL Expressions
   51            | Expressions . T_AND Expressions
   52            | Expressions . T_OR Expressions

    T_OR         shift, and go to state 90
    T_AND        shift, and go to state 91
    T_LESSEQUAL  shift, and go to state 92
    T_LESS       shift, and go to state 93
    T_PLUS       shift, and go to state 94
    T_MINUS      shift, and go to state 95
    T_TIMES      shift, and go to state 96
    T_DIV        shift, and go to state 97
    T_EQUAL      shift, and go to state 98

    $default  reduce using rule 41 (print)


State 72

   24 Declaration: T_ID .

    $default  reduce using rule 24 (Declaration)


State 73

   21 Declarations: Declarations Type Declaration .
   23 Declaration: Declaration . T_COMMA T_ID

    T_COMMA  shift, and go to state 100

    $default  reduce using rule 21 (Declarations)


State 74

   32 Return: T_RETURN . Expressions

    T_NUM        shift, and go to state 60
    T_OPENPAREN  shift, and go to state 61
    T_ID         shift, and go to state 62
    T_MINUS      shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_NEW        shift, and go to state 65
    T_TRUE       shift, and go to state 66
    T_FALSE      shift, and go to state 67

    Expressions  go to state 101
    MethodCall   go to state 69


State 75

   15 Body: Declarations Statements Return .

    $default  reduce using rule 15 (Body)


State 76

   34 Assignment: T_ID . T_DOT T_ID T_E Expressions
   35           | T_ID . T_E Expressions
   36 Method_Call: T_ID . T_DOT T_ID T_OPENPAREN Arguments T_CLOSEPAREN
   37            | T_ID . T_OPENPAREN Arguments T_CLOSEPAREN

    T_OPENPAREN  shift, and go to state 57
    T_DOT        shift, and go to state 58
    T_E          shift, and go to state 59


State 77

   25 Statements: Statement Statements .

    $default  reduce using rule 25 (Statements)


State 78
